cmake_minimum_required(VERSION 3.16)
project(MyTerminal LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)

find_package(Qt6 REQUIRED COMPONENTS Core Widgets)

qt_standard_project_setup()

qt6_add_resources(RESOURCES resources.qrc)

add_executable(myterminal
    src/main.cpp
    ${RESOURCES}
)

target_link_libraries(myterminal Qt6::Core Qt6::Widgets)

install(TARGETS myterminal RUNTIME DESTINATION bin)
